<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTodoActivity">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/toDoEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/hintTitle"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/importanceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/importance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toDoEdt"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/mainRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importanceTv"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/importanceLowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importanceLow" />

        <RadioButton
            android:id="@+id/importanceMiddleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importanceMiddle" />

        <RadioButton
            android:id="@+id/importanceHighBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importanceHigh" />
    </RadioGroup>

    <Button
        android:id="@+id/completeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>